<resources>
    <string name="app_name">¿Qué estás leyendo?</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña</string>
    <string name="prompt_second_pasword">Repetir contraseña</string>
    <string name="prompt_name">Nombre</string>
    <string name="prompt_surname">Apellido</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_sign_in_short">Entrar</string>
    <string name="error_invalid_email">La dirección de email es inválida</string>
    <string name="error_invalid_password">La contraseña es muy corta</string>
    <string name="error_incorrect_password">El mail o contraseña son incorrectos</string>
    <string name="error_field_required">Campo requerido</string>
    <string name="error_repeat_password">La contraseña debe ser igual</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="error_password_required">Ingrese su contraseña</string>
    <string name="text_bienvenido">¡Bienvenido!</string>
    <string name="text_login">Por favor ingrese su e-mail y contraseña para continuar:</string>
    <string name="text_registro">¿No tenés una cuenta? Entrá acá para registrarte:</string>
    <string name="text_botonregistro">Registrarte</string>
    <string name="text_registro_extra">Ingresá aquí tus datos</string>
    <string name="title_activity_profile">¿Qué estás leyendo?</string>
    <string name="title_home">Inicio</string>
    <string name="title_dashboard">Perfil</string>
    <string name="title_notifications">Notificaciones</string>
    <string name="logout">Cerrar sesión</string>
    <string name="error_contrasenias_diferentes">Las contraseñas no son iguales</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="subir_nuevo_libro">Subir nuevo libro</string>
    <string name="subir_nueva_pel_cula">Subir nueva película</string>
    <string name="subir_nueva_serie">Subir nueva serie</string>
    <string name="libro_autor">Autor</string>
    <string name="libro_editorial">Editorial</string>
    <string name="libro_genero">Género</string>
    <string name="libro_fecha">Fecha</string>
    <string name="libro_puntaje">Puntaje:</string>
    <string name="botonSubirLibro">Subir libro</string>
    <string name="cancelar">Cancelar</string>
    <string name="deleteAll">Borrar todo</string>
</resources>
